# CaptureTool

./: .forgecli.json  .gitignore  README.md  calibrate.py  forge_cli.py  main.py  pyproject.toml  requirement.txt  requirements.txt  settings.json  settings.py
capture_tool/: audio.py  calibrate.py  capture.py  cli.py  forge_api.py  interface.py  stream.py  util.py  wave.py
configs/: bassman.json  capture.json  default.json  input.json  session.json
configs/capture/: default.json
configs/device/: default.json
configs/input/: v3_0_0.json
configs/interface/: default.json
configs/session/: bassman.json
forge_cli/: api.py  cli.py
scripts/: generate_sine_sweep.py  measure_latency.py  trim.py
src/: calibrate.py  capture.py  util.py
src/calibration/: __main__.py  adalm1000.py  cli.py
src/capture/: __main__.py  cli.py  manifest.py
src/capture_tool/: __main__.py  audio.py  cli.py  interface.py  stream.py  voltmeter.py  wave.py
src/core/: audio.py  audio_processing.py  db.py  interface.py  plot.py  stream.py  util.py  wave.py
src/forge_cli/: __main__.py  api.py  cli.py
src/interface/: __main__.py  cli.py
src/streamdeck_ui/: __main__.py  streamdeck.py  ui.py
