[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forge_cli"
version = "0.1.0"
dependencies = [
    "matplotlib",
    "numpy",
    "requests",
    "sounddevice",
    "wavio"
]
requires-python = ">=3.11"
authors = [
  {name = "Ryan Cluff", email = "ryancluf@yahoo.com"},
]
description = "cli for recording amp captures and interacting with the forge api"
readme = "README.md"

[project.scripts]
forge-calibration = "calibration.cli:main"
forge-capture = "capture.cli:main"
forge-interface = "interface.cli:main"
forge-remote = "forge_cli.cli:main"
